k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-svc
spec:
  selector:
    app: server
  ports:
  - port: 8080
    targetPort: 8080
