k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/override: do-not-preserve-host
    # konghq.com/plugins: ...
 
spec:
  # ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /server
        pathType: Prefix
        backend:
          service:
            name: server-svc
            port:
              number: 8080
